--- a/Views/Register/Register.cshtml
+++ b/Views/Register/Register.cshtml
@@ -16,7 +16,7 @@
 <body>
     <form id="register-form" method="post" >
         <div class="container">
-            <h1>F_Forum Register Section</h1>
+            <h1>PHA Register Section</h1>
             <label for="fullname"><b>Fullname *</b></label>
             <input type="text"
                    placeholder="Enter Fullname"
