remove the layout in register page

--- a/Views/Register/Register.cshtml
+++ b/Views/Register/Register.cshtml
@@ -8,7 +8,7 @@
     <title>RegisterController</title>
     <style>
         body {
-            background-image: url(https://www.huniarchitectes.com/uploads/images/PROJECT/URBAN/8-FPT%20QUINHON/FPT_QN_UNI_VIEW%2003.jpg);
+            background-color: black;
         }
     </style>
 </head>
