--- a/Views/Register/Register.cshtml
+++ b/Views/Register/Register.cshtml
@@ -53,7 +53,7 @@
         </div>
     </form>
     <div>
-        <p>Already have an account? <a href="./login">Log in</a>.</p>
+        <p>Already have an account? <a asp-area="" asp-controller="Login" asp-action="LoginPage">Log in</a>.</p>
     </div>
 
 </body>
