--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -21,7 +21,7 @@
 				<div class="col-md-6 col-lg-4">
 					<div class="login-wrap p-0">
 						<h3 class="mb-4 text-center">LOGIN</h3>
-						<form class="signin-form" method="post">
+						<form action="Login" method="post" class="form-horizontal" role="form">
 							<div class="form-group">
 								<input type="text" class="form-control" placeholder="Username" name="username" required>
 							</div>
