--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,8 +2,276 @@
     ViewData["Title"] = "Home Page";
     Layout = "_Layout";
 }
+<link rel="stylesheet" href="~/css/index.css">
+<div class="slideshow-container">
+    <div class="fade">
+        <div class="banner"><img id="slidershow" src=""></div>
+        <div class="text">1 / 4</div>
+    </div>
+    <a class="prev" onclick="truoc()">❮</a>
+    <a class="next" onclick="sau()">❯</a>
+</div>
+<br>
+<div style="text-align:center">
+    <span class="dot" onclick="bam(1)"></span>
+    <span class="dot" onclick="bam(2)"></span>
+    <span class="dot" onclick="bam(3)"></span>
+    <span class="dot" onclick="bam(4)"></span>
+</div>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="aside">
+    <div class="subaside_one">
+        <img src="images/banner_box_1.jpg" alt="">
+    </div>
+    <div class="subaside_two">
+        <div class="sub__one">
+            <img class="banner_one" src="images/banner_box_2.jpg " alt=" ">
+            <img src="images/banner_box_3.jpg " alt=" ">
+        </div>
+        <div class="sub__two">
+            <img src="images/banner_box_4.jpg " alt=" ">
+        </div>
+    </div>
+</div>
+
+<div class="chicken">
+    <div class="div">
+        <p class="chicken_sale">
+            MENU
+        </p>
+        <h2>
+            _______
+        </h2>
+    </div>
+    <div class="sanpham2">
+        <div class="sanpham3">
+
+            <img src="images/sanpham4.jpg" alt="">
+            <h3>Đùi gà chiên bơ</h3>
+            <p style="text-align: center; color:rgb(98, 101, 104) ">
+                Thực phẩm sạch sẽ , an toàn , được đánh giá
+                cao trong các thương hiệu đi đầu tại...
+            </p>
+            <h3 style="text-align: center; color:red ">75.000<sup>đ</sup></h3>
+
+        </div>
+    </div>
+    <div class="sanpham2">
+        <div class="sanpham3">
+
+            <img src="images/sanpham5.jpg" alt="">
+            <h3>Đùi gà chiên bơ</h3>
+            <p style="text-align: center; color:rgb(98, 101, 104) ">
+                Thực phẩm sạch sẽ , an toàn , được đánh giá
+                cao trong các thương hiệu đi đầu tại...
+            </p>
+            <h3 style="text-align: center; color:red ">150.000<sup>đ</sup></h3>
+
+        </div>
+    </div>
+    <div class="sanpham2">
+        <div class="sanpham3">
+
+            <img src="images/sanpham6.jpg" alt="">
+            <h3>Đùi gà chiên bơ</h3>
+            <p style="text-align: center; color:rgb(98, 101, 104) ">
+                Thực phẩm sạch sẽ , an toàn , được đánh giá
+                cao trong các thương hiệu đi đầu tại...
+            </p>
+            <h3 style="text-align: center; color:red ">65.000 <sup>đ</sup> </h3>
+
+        </div>
+    </div>
+    <div class="sanpham2">
+        <div class="sanpham3">
+            <img src="images/sanpham7.jpg" alt="">
+            <h3>Đùi gà chiên bơ</h3>
+            <p style="text-align: center; color:rgb(98, 101, 104) ">
+                Thực phẩm sạch sẽ , an toàn , được đánh giá
+                cao trong các thương hiệu đi đầu tại...
+            </p>
+            <p style="text-align: center; color:red;  ">150.000<sup>đ</sup></p>
+
+        </div>
+    </div>
+</div>
+<div class="chicken">
+    <div class="div">
+        <p class="chicken_sale">
+            CƠM CHIÊN
+        </p>
+        <h2>
+            _______
+        </h2>
+    </div>
+    <div class="sanpham2">
+        <div class="sanpham3">
+            <img src="images/sanpham4.jpg" alt="">
+            <h3>Đùi gà chiên bơ</h3>
+            <p style="text-align: center; color:rgb(98, 101, 104) ">
+                Thực phẩm sạch sẽ , an toàn , được đánh giá
+                cao trong các thương hiệu đi đầu tại...
+            </p>
+            <h3 style="text-align: center; color:red ">75.000<sup>đ</sup></h3>
+        </div>
+    </div>
+    <div class="sanpham2">
+        <div class="sanpham3">
+            <img src="images/sanpham5.jpg" alt="">
+            <h3>Đùi gà chiên bơ</h3>
+            <p style="text-align: center; color:rgb(98, 101, 104) ">
+                Thực phẩm sạch sẽ , an toàn , được đánh giá
+                cao trong các thương hiệu đi đầu tại...
+            </p>
+            <h3 style="text-align: center; color:red ">150.000<sup>đ</sup></h3>
+
+        </div>
+    </div>
+    <div class="sanpham2">
+        <div class="sanpham3">
+            <img src="images/sanpham6.jpg" alt="">
+            <h3>Đùi gà chiên bơ</h3>
+            <p style="text-align: center; color:rgb(98, 101, 104) ">
+                Thực phẩm sạch sẽ , an toàn , được đánh giá
+                cao trong các thương hiệu đi đầu tại...
+            </p>
+            <h3 style="text-align: center; color:red ">65.000 <sup>đ</sup> </h3>
+        </div>
+    </div>
+    <div class="sanpham2">
+        <div class="sanpham3">
+            <img src="images/sanpham7.jpg" alt="">
+            <h3>Đùi gà chiên bơ</h3>
+            <p style="text-align: center; color:rgb(98, 101, 104) ">
+                Thực phẩm sạch sẽ , an toàn , được đánh giá
+                cao trong các thương hiệu đi đầu tại...
+            </p>
+            <p style="text-align: center; color:red;  ">150.000<sup>đ</sup></p>
+
+        </div>
+    </div>
+</div>
+<div class="chicken">
+    <div class="div">
+        <p class="chicken_sale">
+            GÀ CHIÊN
+        </p>
+        <h2>
+            _______
+        </h2>
+    </div>
+    <div class="sanpham2">
+        <div class="sanpham3">
+            <img src="images/sanpham4.jpg" alt="">
+            <h3>Đùi gà chiên bơ</h3>
+            <p style="text-align: center; color:rgb(98, 101, 104) ">
+                Thực phẩm sạch sẽ , an toàn , được đánh giá
+                cao trong các thương hiệu đi đầu tại...
+            </p>
+            <h3 style="text-align: center; color:red ">75.000<sup>đ</sup></h3>
+
+        </div>
+    </div>
+    <div class="sanpham2">
+        <div class="sanpham3">
+            <img src="images/sanpham5.jpg" alt="">
+            <h3>Đùi gà chiên bơ</h3>
+            <p style="text-align: center; color:rgb(98, 101, 104) ">
+                Thực phẩm sạch sẽ , an toàn , được đánh giá
+                cao trong các thương hiệu đi đầu tại...
+            </p>
+            <h3 style="text-align: center; color:red ">150.000<sup>đ</sup></h3>
+
+        </div>
+    </div>
+    <div class="sanpham2">
+        <div class="sanpham3">
+
+            <img src="images/sanpham6.jpg" alt="">
+            <h3>Đùi gà chiên bơ</h3>
+            <p style="text-align: center; color:rgb(98, 101, 104) ">
+                Thực phẩm sạch sẽ , an toàn , được đánh giá
+                cao trong các thương hiệu đi đầu tại...
+            </p>
+            <h3 style="text-align: center; color:red ">65.000 <sup>đ</sup> </h3>
+
+        </div>
+    </div>
+    <div class="sanpham2">
+        <div class="sanpham3">
+            <img src="images/sanpham7.jpg" alt="">
+            <h3>Đùi gà chiên bơ</h3>
+            <p style="text-align: center; color:rgb(98, 101, 104) ">
+                Thực phẩm sạch sẽ , an toàn , được đánh giá
+                cao trong các thương hiệu đi đầu tại...
+            </p>
+            <p style="text-align: center; color:red;  ">150.000<sup>đ</sup></p>
+
+        </div>
+    </div>
+</div>
+<div class="chicken">
+    <div class="div">
+        <p class="chicken_sale">
+            CƠM TRỘN
+        </p>
+        <h2>
+            _______
+        </h2>
+    </div>
+    <div class="sanpham2">
+        <div class="sanpham3">
+            <img src="images/sanpham4.jpg" alt="">
+            <h3>Đùi gà chiên bơ</h3>
+            <p style="text-align: center; color:rgb(98, 101, 104) ">
+                Thực phẩm sạch sẽ , an toàn , được đánh giá
+                cao trong các thương hiệu đi đầu tại...
+            </p>
+            <h3 style="text-align: center; color:red ">75.000<sup>đ</sup></h3>
+
+        </div>
+    </div>
+    <div class="sanpham2">
+        <div class="sanpham3">
+            <img src="images/sanpham5.jpg" alt="">
+            <h3>Đùi gà chiên bơ</h3>
+            <p style="text-align: center; color:rgb(98, 101, 104) ">
+                Thực phẩm sạch sẽ , an toàn , được đánh giá
+                cao trong các thương hiệu đi đầu tại...
+            </p>
+            <h3 style="text-align: center; color:red ">150.000<sup>đ</sup></h3>
+
+        </div>
+    </div>
+    <div class="sanpham2">
+        <div class="sanpham3">
+            <img src="images/sanpham6.jpg" alt="">
+            <h3>Đùi gà chiên bơ</h3>
+            <p style="text-align: center; color:rgb(98, 101, 104) ">
+                Thực phẩm sạch sẽ , an toàn , được đánh giá
+                cao trong các thương hiệu đi đầu tại...
+            </p>
+            <h3 style="text-align: center; color:red ">65.000 <sup>đ</sup> </h3>
+
+        </div>
+    </div>
+    <div class="sanpham2">
+        <div class="sanpham3">
+            <img src="images/sanpham7.jpg" alt="">
+            <h3>Đùi gà chiên bơ</h3>
+            <p style="text-align: center; color:rgb(98, 101, 104) ">
+                Thực phẩm sạch sẽ , an toàn , được đánh giá
+                cao trong các thương hiệu đi đầu tại...
+            </p>
+            <p style="text-align: center; color:red;  ">150.000<sup>đ</sup></p>
+        </div>
+    </div>
+</div>
+<div class="image">
+    <img src="images/image1.jpg" alt="">
+    <img src="images/image2.jpg" alt="">
+    <img src="images/image3.jpg" alt="">
+    <img src="images/image4.jpg" alt="">
+    <img src="images/image5.jpg" alt="">
+    <img src="images/image6.jpg" alt="">
 </div>
