--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,21 +3,8 @@
     Layout = "_Layout";
 }
 <link rel="stylesheet" href="~/css/index.css">
-<div class="slideshow-container">
-    <div class="fade">
-        <div class="banner"><img id="slidershow" src=""></div>
-        <div class="text">1 / 4</div>
-    </div>
-    <a class="prev" onclick="truoc()">❮</a>
-    <a class="next" onclick="sau()">❯</a>
-</div>
-<br>
-<div style="text-align:center">
-    <span class="dot" onclick="bam(1)"></span>
-    <span class="dot" onclick="bam(2)"></span>
-    <span class="dot" onclick="bam(3)"></span>
-    <span class="dot" onclick="bam(4)"></span>
-</div>
+
+
 
 <div class="aside">
     <div class="subaside_one">
@@ -26,7 +13,7 @@
     <div class="subaside_two">
         <div class="sub__one">
             <img class="banner_one" src="images/banner_box_2.jpg " alt=" ">
-            <img src="images/banner_box_3.jpg " alt=" ">
+            <img src="/images/banner_box_3.jpg " alt=" ">
         </div>
         <div class="sub__two">
             <img src="images/banner_box_4.jpg " alt=" ">
@@ -90,7 +77,7 @@
                 Thực phẩm sạch sẽ , an toàn , được đánh giá
                 cao trong các thương hiệu đi đầu tại...
             </p>
-            <p style="text-align: center; color:red;  ">150.000<sup>đ</sup></p>
+            <h3 style="text-align: center; color:red;  ">150.000<sup>đ</sup></h3>
 
         </div>
     </div>
@@ -146,7 +133,7 @@
                 Thực phẩm sạch sẽ , an toàn , được đánh giá
                 cao trong các thương hiệu đi đầu tại...
             </p>
-            <p style="text-align: center; color:red;  ">150.000<sup>đ</sup></p>
+            <h3 style="text-align: center; color:red;  ">150.000<sup>đ</sup></h3>
 
         </div>
     </div>
@@ -205,7 +192,7 @@
                 Thực phẩm sạch sẽ , an toàn , được đánh giá
                 cao trong các thương hiệu đi đầu tại...
             </p>
-            <p style="text-align: center; color:red;  ">150.000<sup>đ</sup></p>
+            <h3 style="text-align: center; color:red;  ">150.000<sup>đ</sup></h3>
 
         </div>
     </div>
@@ -263,7 +250,7 @@
                 Thực phẩm sạch sẽ , an toàn , được đánh giá
                 cao trong các thương hiệu đi đầu tại...
             </p>
-            <p style="text-align: center; color:red;  ">150.000<sup>đ</sup></p>
+            <h3 style="text-align: center; color:red;  ">150.000<sup>đ</sup></h3>
         </div>
     </div>
 </div>
